--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wild Rydes</title>
+  <title>TumbdeGoCabs by Arnav Tumbde</title>
 
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/main.css">
@@ -14,11 +14,11 @@
 <body class="page-home">
 
   <header class="site-header">
-    <h1 class="title">Wild Rydes</h1>
+    <h1 class="title">TumbdeGoCabs</h1>
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="unicorns.html">Meet the Unicorns</a></li>
+        <li><a href="unicorns.html">Meet the Rider</a></li>
         <li><a href="investors.html">Investors &amp; Board of Directors</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="apply.html">Apply</a></li>
@@ -32,7 +32,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Work?</h2>
       <p class="content">
-        In today’s fast paced world, you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing Wild Rydes, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
+        In today’s fast paced world, you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing TumbdeGoCabs, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
       </p>
     </div>
 
@@ -40,14 +40,14 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-download">Download The App</h3>
-          <p class="content">Head over to the app store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
+          <p class="content">Head over to the app store and download the TumbdeGoCabs app. You’re just a few taps away from getting your ryde.</p>
         </div>
       </div>
 
       <div class="column">
         <div class="home-about-block">
-          <h3 class="title icon-unicorn">Request A Unicorn</h3>
-          <p class="content">We can get you there. Simply request a ryde on the app and we'll connect you with a unicorn immediately.</p>
+          <h3 class="title icon-unicorn">Request A Rider</h3>
+          <p class="content">We can get you there. Simply request a ryde on the app and we'll connect you with a Rider immediately.</p>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-success">Ride Off To Success!</h3>
-          <p class="content">After matching with your unicorn and agreeing to its terms, you’ll be all set. Your unicorn will arrive shortly to pick you up.</p>
+          <p class="content">After matching with your  and agreeing to its terms, you’ll be all set. Your Rider will arrive shortly to pick you up.</p>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">Our Story</h2>
       <p class="content">
-        Wild Rydes was started by a former hedge fund analyst and a software developer. The two long-time friends happened upon the Wild Rydes idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of unicorns prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, Wild Rydes was formed and has since raised untold amounts of venture capital. Today, Wild Rydes has thousands of unicorns in its network fulfilling hundreds of rydes each day.
+        TumbdeGoCabs was started by a former hedge fund analyst and a software developer. The two long-time friends happened upon the TumbdeGoCabs idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of Riders prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, TumbdeGoCabs was formed and has since raised untold amounts of venture capital. Today, TumbdeGoCabs has thousands of Riders in its network fulfilling hundreds of rydes each day.
       </p>
     </div>
   </section>
@@ -87,7 +87,7 @@
 
       <h2 class="section-title">Sign Up</h2>
 
-      <p class="content">Wild Rydes is coming soon! Enter your email to enter the limited private beta</p>
+      <p class="content">TumbdeGoCabs is coming soon! Enter your email to enter the limited private beta</p>
 
       <div class="apps">
         <a class="app-icon" href=""><img src="images/wr-home-apple.png"></a>
@@ -110,9 +110,9 @@
     <div class="row column medium-8 xxlarge-6">
       <div class="quote-wrap">
         <div class="quote">
-          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Wild Rydes Got me there from the marina in under five minutes.”
+          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt TumbdeGoCabs Got me there from the marina in under five minutes.”
         </div>
-        <div class="quoter">- Satisfied Wild Rydes User</div>
+        <div class="quoter">- Satisfied TumbdeGoCabs User</div>
       </div>
     </div>
   </section>
@@ -137,7 +137,7 @@
       <nav class="footer-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="unicorns.html">Meet the Unicorns</a></li>
+          <li><a href="unicorns.html">Meet the Riders</a></li>
           <li><a href="investors.html">Investors & Board of Directors</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="apply.html">Apply</a></li>
