--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Giddy Up!</a>
+    <a class="home-button" href="/register.html">Click Here!</a>
   </header>
 
   <section class="home-about">
@@ -40,21 +40,21 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-download">Download The App</h3>
-          <p class="content">Head over to the app store and download the TumbdeGoCabs app. You’re just a few taps away from getting your ryde.</p>
+          <p class="content">Head over to the app store and download the TumbdeGoCabs app. You’re just a few taps away from getting your TumbdeGo Cab.</p>
         </div>
       </div>
 
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-unicorn">Request A Rider</h3>
-          <p class="content">We can get you there. Simply request a ryde on the app and we'll connect you with a Rider immediately.</p>
+          <p class="content">We can get you there. Simply request a TumbdeGo Cab on the app and we'll connect you with a Rider immediately.</p>
         </div>
       </div>
 
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-price">Pick A Price</h3>
-          <p class="content">Pick the valuation you're willing to pay and your ryde is set up. The only surge is the acceleration you get when taking off.</p>
+          <p class="content">Pick the valuation you're willing to pay and your TumbdeGo Cab is set up. The only surge is the acceleration you get when taking off.</p>
         </div>
       </div>
 
@@ -71,7 +71,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">Our Story</h2>
       <p class="content">
-        TumbdeGoCabs was started by a former hedge fund analyst and a software developer. The two long-time friends happened upon the TumbdeGoCabs idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of Riders prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, TumbdeGoCabs was formed and has since raised untold amounts of venture capital. Today, TumbdeGoCabs has thousands of Riders in its network fulfilling hundreds of rydes each day.
+        TumbdeGoCabs was started by a former hedge fund analyst and a software developer. The two long-time friends happened upon the TumbdeGoCabs idea after attending a silent yoga retreat in Nevada. After gazing upon the majestic herds of Riders prancing across a surreal Nevada sunset, they witnessed firsthand the poverty and unemployment endemic to that once proud race. Whether it was modern society’s reliance on science over magic or not, we’ll never know the cause of their Ozymandian downfall and fade to obscurity. Moved by empathy, romance, and free enterprise, they saw an opportunity to marry society’s demand for faster, more flexible transportation to underutilized beasts of labor through an on-demand market making transportation app. Using the founders’ respective expertise in animal husbandry and software engineering, TumbdeGoCabs was formed and has since raised untold amounts of venture capital. Today, TumbdeGoCabs has thousands of Riders in its network fulfilling hundreds of TumbdeGo Cabss each day.
       </p>
     </div>
   </section>
@@ -147,7 +147,7 @@
 
     <div class="row column">
       <div class="footer-legal">
-        &copy;WildRydes Inc<br>
+        &copy;TumbdeGo Cabs Inc<br>
         All Rights Reserved
       </div>
     </div>
