--- a/unicorns.html
+++ b/unicorns.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Unicorns - Wild Rydes</title>
+  <title>Unicorns - TumbdeGo Cabs</title>
 
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/main.css">
@@ -14,10 +14,10 @@
 <body class="page-unicorns">
 
   <header class="site-header">
-    <div class="site-logo dark">Wild Rydes</div>
+    <div class="site-logo dark">TumbdeGo Cabs</div>
 
     <div class="row column medium-8 large-6 xlarge-5 xxlarge-4">
-      <h1 class="title">Unicorns Are Our Friends</h1>
+      <h1 class="title">TumbdeGo Cab Drivers Are Our Friends</h1>
       <p class="content">
         The app is what makes this service exist, but the unicorns make it move. Meet them and see who you are riding with!
       </p>
@@ -37,11 +37,11 @@
 
   <div class="row column medium-10 large-8 xxlarge-6">
     <p class="content">
-      Wild Rydes has a dedicated staff that recruits, trains, and tends to our herd of unicorns. We take great pride in the quality of unicorns and rydes that we provide to our customers, and our staff exercises the utmost care in vetting the unicorns that join our herd.
+      TumbdeGo Cabs has a dedicated staff that recruits, trains, and tends to our herd of unicorns. We take great pride in the quality of unicorns and rydes that we provide to our customers, and our staff exercises the utmost care in vetting the unicorns that join our herd.
     </p>
 
     <p class="content">
-      Every unicorn goes through a rigorous due diligence process where we perform background checks, flying exams, and several rounds of interviews. Unicorns accepted to Wild Rydes are then treated to the best care and maintenance possible. We provide them excellent benefits, health care, and employee perks. This is part of our company philosophy in which happy unicorns lead to happy customers.
+      Every unicorn goes through a rigorous due diligence process where we perform background checks, flying exams, and several rounds of interviews. Unicorns accepted to TumbdeGo Cabs are then treated to the best care and maintenance possible. We provide them excellent benefits, health care, and employee perks. This is part of our company philosophy in which happy unicorns lead to happy customers.
     </p>
 
     <p class="content">Meet a few of the unicorns that are part of our family.</p>
@@ -55,10 +55,10 @@
         </div>
 
         <div class="columns medium-7 large-6 xlarge-5 xxlarge-4">
-          <h2 class="title">Bucephalus</h2>
+          <h2 class="title">Swift LXi</h2>
           <div class="subtitle">Golden Swiss</div>
           <p class="content">
-            Bucephalus joined Wild Rydes in February 2016 and has been giving rydes almost daily. He says he most enjoys getting to know each of his ryders, which makes the job more interesting for him. In his spare time, Bucephalus enjoys watching sunsets and playing Pokemon Go.
+            Swift LXi joined TumbdeGo Cabs in February 2016 and has been giving rydes almost daily. He says he most enjoys getting to know each of his ryders, which makes the job more interesting for him. In his spare time, Swift LXi enjoys watching sunsets and playing Pokemon Go.
           </p>
         </div>
       </div>
@@ -72,9 +72,9 @@
 
         <div class="columns medium-7 medium-pull-5 large-6 large-pull-6 xlarge-5 xlarge-pull-5 xxlarge-4 xxlarge-offset-1">
           <h2 class="title">Shadowfox</h2>
-          <div class="subtitle">Brown Jersey</div>
+          <div class="subtitle">Mercedes</div>
           <p class="content">
-            Shadowfox joined Wild Rydes after completing a distinguished career in the military, where he toured the world in many critical missions. Shadowfox enjoys impressing his ryders with magic tricks that he learned from his previous owner.
+            Shadowfox joined TumbdeGo Cabs after completing a distinguished career in the military, where he toured the world in many critical missions. Shadowfox enjoys impressing his ryders with magic tricks that he learned from his previous owner.
           </p>
         </div>
       </div>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="columns medium-7 large-6 xlarge-5 xxlarge-4">
-          <h2 class="title">Rocinante</h2>
-          <div class="subtitle">Baby Flying Yellowback</div>
+          <h2 class="title">Maruti Wagon R</h2>
+          <div class="subtitle">Baby Flying Hatchback</div>
           <p class="content">
-            Rocinante recently joined the Wild Rydes team in Madrid, Spain. She was instrumental in forming Wild Rydes’ Spanish operations after a long, distinguished acting career in windmill shadow-jousting.
+            Maruti Wagon R recently joined the TumbdeGo Cabs team in Madrid, Spain. She was instrumental in forming TumbdeGo Cabs’ Spanish operations after a long, distinguished acting career in windmill shadow-jousting.
           </p>
         </div>
       </div>
